--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,5 +1,6 @@
 
-target_sources(CoreKit PRIVATE
-    Component.cpp
-    Registry.cpp
+target_sources(CoreKit
+    PRIVATE
+        Component.cpp
+        Registry.cpp
 )
