--- a/drivers/CMakeLists.txt
+++ b/drivers/CMakeLists.txt
@@ -1,5 +1,6 @@
 
-target_sources(CoreKit PRIVATE
-    Gpio.cpp
-    Pwm.cpp
+target_sources(CoreKit
+    PRIVATE
+        Gpio.cpp
+        Pwm.cpp
 )
