--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,11 @@ zephyr_include_directories(
     core
     drivers
     services
+    system
 )
 
 add_subdirectory(application)
 add_subdirectory(components)
 add_subdirectory(core)
 add_subdirectory(drivers)
-add_subdirectory(services)
+add_subdirectory(system)
