Time is now counted in ticks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ zephyr_include_directories(
     system
 )
 
-add_subdirectory(application)
 add_subdirectory(components)
 add_subdirectory(core)
 add_subdirectory(drivers)
+add_subdirectory(services)
 add_subdirectory(system)
