bringing zephyr to the edge by introducing a hal layer. Gpio already done. Also some small structure changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ zephyr_include_directories(
     components
     core
     drivers
+    hal
+    scheduler
     services
     system
     tests
@@ -17,6 +19,8 @@ zephyr_include_directories(
 add_subdirectory(components)
 add_subdirectory(core)
 add_subdirectory(drivers)
+add_subdirectory(hal)
+add_subdirectory(scheduler)
 add_subdirectory(services)
 add_subdirectory(system)
 add_subdirectory(tests)
