--- a/system/CMakeLists.txt
+++ b/system/CMakeLists.txt
@@ -3,6 +3,7 @@ zephyr_library_sources(
     ISystemTime.cpp
     System.cpp
     SystemClock.cpp
+    SystemPrint.cpp
     SystemTime.cpp
     TickCounter.cpp
 )
